# foodeval

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README-pypi.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: data-issue.md  task-proposal.md
foodeval/: __init__.py  __main__.py  cli.py  evaluate.py  leaderboard.py  matrix.py  preflight.py
foodeval/adapters/: __init__.py  base.py  bedrock.py  bm25.py  cohere_adapter.py  factory.py  gemini_adapter.py  openai_adapter.py  prompted.py  sentence_transformer.py  vertex_adapter.py  voyage_adapter.py
foodeval/data/: bakery_match.json  beverage_match.json  concept_search.json  cross_lingual_match.json  cuisine_classify.json  diet_search.json  food_search.json  global_match.json  indian_match.json  noisy_menu_match.json  noisy_search.json  portion_size.json
foodeval/metrics/: __init__.py  bootstrap.py  classification.py  f1.py  ndcg.py
foodeval/tasks/: __init__.py  base.py  classification.py  pair_classification.py  retrieval.py
results/: bge_m3_384.json  bm25.json  cohere_embed_v4_384.json  cohere_multilingual_v3_384.json  e5_large_384.json  gte_large_v15_384.json  latimal_food_embed_v1_384.json  nomic_embed_v15_384.json  openai_te3_large_384.json  voyage_4_large_384.json
scripts/: check_freshness.py  run_latimal.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_data_integrity.py  test_evaluate.py  test_leaderboard.py  test_metrics.py  test_tasks.py
