[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foodeval"
version = "0.1.1"
description = "FoodEval: a benchmark for food-domain text embeddings"
readme = "README-pypi.md"
requires-python = ">=3.10"
license = "LicenseRef-CC-BY-NC-4.0-Evaluation-Only"
authors = [
    { name = "Latimal", email = "aditya@latimal.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
api = [
    "boto3",
    "openai",
]
local = [
    "einops",
    "sentence-transformers",
    "torch",
]
# lexical-tf: no extra packages needed; the lexical baseline uses sklearn HashingVectorizer.
# cohere: no extra packages needed; the Cohere adapter uses only urllib (stdlib).
all = [
    "foodeval[api,local]",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
foodeval = "foodeval.cli:main"

[project.urls]
Homepage = "https://github.com/latimal/foodeval"
Repository = "https://github.com/latimal/foodeval"
Issues = "https://github.com/latimal/foodeval/issues"
Changelog = "https://github.com/latimal/foodeval/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["foodeval"]

[tool.hatch.build.targets.sdist]
include = ["foodeval", "tests", "scripts", "README.md", "README-pypi.md", "LICENSE", "CITATION.cff", "CHANGELOG.md", "pyproject.toml"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
